[package]
name = "oxideav-farbfeld-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# farbfeld is a fixed-layout container (8-byte magic + two BE u32
# dimensions + width*height*4 BE u16 samples). The decode surface is
# `parse_farbfeld` / `parse_farbfeld_header` / the streaming reader;
# the encode surface is `encode_farbfeld` (pre-serialised BE body) +
# `encode_farbfeld_from_rgba16` (native-endian pixels) +
# `encode_farbfeld_image` (flat plane) + `FarbfeldStreamWriter`. Both
# halves are pure byte-slice / io::Read / io::Write code with no
# external dependency to cross-check against. This fuzz crate ships
# two targets: `decode` exercises the parser against arbitrary attacker
# bytes (must never panic) and checks the lossless re-encode roundtrip
# on inputs that parse; `encode` exercises the three whole-file encoder
# entry points plus the streaming writer against pseudo-random
# `(width, height, body)` triples and asserts they all agree byte-for-
# byte and roundtrip cleanly through the parser.
#
# The harness builds against the standalone (no `oxideav-core`) API:
# `default-features = false` drops the framework dependency so the fuzz
# targets compile and link the parser/encoder directly.

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.oxideav-farbfeld]
path = ".."
default-features = false

[lib]
name = "oxideav_farbfeld_fuzz"
path = "src/lib.rs"

# Prevent this from interfering with the umbrella workspace.
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false

[[bin]]
name = "encode"
path = "fuzz_targets/encode.rs"
test = false
doc = false
