[package]
name = "oxideav-farbfeld-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# farbfeld is a fixed-layout container (8-byte magic + two BE u32
# dimensions + width*height*4 BE u16 samples). The decode surface is
# `parse_farbfeld` / `parse_farbfeld_header` / the streaming reader;
# the encode surface is `encode_farbfeld` (pre-serialised BE body) +
# `encode_farbfeld_from_rgba16` (native-endian pixels) +
# `encode_farbfeld_image` (flat plane) + `FarbfeldStreamWriter`. Both
# halves are pure byte-slice / io::Read / io::Write code with no
# external dependency to cross-check against. This fuzz crate ships
# two targets: `decode` exercises the parser against arbitrary attacker
# bytes (must never panic) and checks the lossless re-encode roundtrip
# on inputs that parse; `encode` exercises the three whole-file encoder
# entry points plus the streaming writer against pseudo-random
# `(width, height, body)` triples and asserts they all agree byte-for-
# byte and roundtrip cleanly through the parser.
#
# Round 235 added a third target, `stream_io`, which drives the
# `FarbfeldStreamReader` / `FarbfeldStreamWriter` against a chunked I/O
# transport whose `read` / `write` calls return short / mid-sized /
# full-buffer chunks drawn from a fuzz-controlled xorshift32 schedule.
# That exercises the streaming reader's bounded `Read::take` /
# `read_to_end` discipline and the streaming writer's `Write::write_all`
# discipline under attacker-chosen choppy I/O — a meaningfully different
# surface from the `decode` / `encode` targets which both drive their
# input through a bulk `Cursor` / byte slice.
#
# The harness builds against the standalone (no `oxideav-core`) API:
# `default-features = false` drops the framework dependency so the fuzz
# targets compile and link the parser/encoder directly.

[dependencies]
libfuzzer-sys = "0.4"

# The `decode` / `encode` / `stream_io` targets only need the standalone
# parser/encoder, but the `trait_roundtrip` target drives the framework
# Decoder / Encoder behind the `registry` feature (which pulls
# `oxideav-core`). Cargo unifies features across a build, so enabling
# `registry` here turns it on for every target; the standalone API stays
# fully available, so the no-framework targets compile unchanged.
[dependencies.oxideav-farbfeld]
path = ".."
default-features = true
features = ["registry"]

# `trait_roundtrip` constructs `oxideav_core` frame/packet types directly.
# `oxideav-farbfeld` depends on `oxideav-core = "0.1"` from crates.io; the
# patch below redirects that to the in-tree core so the fuzz crate links a
# single `oxideav-core` (otherwise the framework types the target builds
# wouldn't match the ones the encoder/decoder traits expect).
[dependencies.oxideav-core]
path = "../../oxideav-core"

[lib]
name = "oxideav_farbfeld_fuzz"
path = "src/lib.rs"

# Prevent this from interfering with the umbrella workspace.
[workspace]
members = ["."]

# `oxideav-farbfeld`'s `oxideav-core = "0.1"` dep would otherwise resolve
# to a crates.io copy distinct from the in-tree `oxideav-core` the
# `trait_roundtrip` target links directly, producing two incompatible
# `Frame`/`Packet` types. Patch both to the same local crate.
[patch.crates-io]
oxideav-core = { path = "../../oxideav-core" }

[profile.release]
debug = 1

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false

[[bin]]
name = "encode"
path = "fuzz_targets/encode.rs"
test = false
doc = false

[[bin]]
name = "stream_io"
path = "fuzz_targets/stream_io.rs"
test = false
doc = false

[[bin]]
name = "trait_roundtrip"
path = "fuzz_targets/trait_roundtrip.rs"
test = false
doc = false
